Add sample usage of DelegateCommand in HomeController

--- a/MVCinWPF/MVCinWPF.csproj
+++ b/MVCinWPF/MVCinWPF.csproj
@@ -51,6 +51,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Tools\DelegateCommand.cs" />
     <Compile Include="Startup.xaml.cs">
       <DependentUpon>Startup.xaml</DependentUpon>
     </Compile>
